compiler/tests/fuzz/negative_corpus/parse_unclosed_block.mlc
fn f() -> i32 = do
  let x = 1
  x